temp/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  creationTimestamp: '2026-03-27T07:10:37Z'
  generation: 4
  managedFields:
    - apiVersion: networking.istio.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          .: {}
          'f:hosts': {}
          'f:http': {}
      manager: Mozilla
      operation: Update
      time: '2026-04-01T15:11:12Z'
  name: helloworld
  namespace: sample
  resourceVersion: '1993507'
  uid: 37be5dad-1395-46b8-969a-d40fc9c61312
spec:
  hosts:
    - helloworld.sample.svc.cluster.local
  http:
    - route:
        - destination:
            host: helloworld.sample.svc.cluster.local
            subset: east
          weight: 90
        - destination:
            host: helloworld.sample.svc.cluster.local
            subset: west
          weight: 10
